resources/css/styles.css
body {
  background-color: #ecf0f5;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  padding: 0;
  margin: 0;
}

/*
 * Login and Sign Up
 */

#wrapper {
  max-width: 340px;
  margin: auto;
}

.auth-form,
.change-auth-dialog {
  background-color: white;
  padding: 20px;
}

.auth-form > div {
  margin-bottom: 10px;
}

.auth-form-title { 
  text-align: center;
}

.auth-form label {
  font-weight: bold;
}

.auth-form input,
.auth-form select,
.auth-form,
.change-auth-dialog,
#search input {
  border: 1px solid #e6e6e6;
}

.auth-form button {
  border: none;
  background-color: #075dc5;
  background-image: linear-gradient(-180deg,#2e88f7,#075dc5 90%);
  font-size: 1em;
  font-weight: bold;
  color: white;
  cursor: pointer;
}

.auth-form input,
.auth-form select,
.auth-form button,
#search input{
  box-sizing: border-box;
  width: 100%;
}

.auth-form input,
.auth-form select,
.auth-form button,
#messages,
#search input {
  padding: 7px 10px;
}

.input-error {
  border: 1px solid #f44 !important;
}

#messages {
  background-color: #f44;
  color: white;
  display: none;
}

.change-auth-dialog {
  margin-top: 20px;
}

/*
 * Homepage
 */

#header {
  min-height: 50px;
  background-color: white;
  background-color: #075dc5;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

#header h1 {
  margin: 6.5px 30px;
  color: white;
}

#header ul {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  justify-content: flex-end;
}

#header ul li {
  list-style-type: none;
  height: 50px;
  border-left: 1px solid white;
  box-sizing: border-box;
}

#header ul li a,
#header ul li span {
  display: block;
  color: white !important;
  text-decoration: none !important;
  padding: 16px 20px;
}

#main {
  display: flex;
  flex-wrap: wrap;
}

#main > div {
  background-color: white;
  padding: 20px;
  margin: 10px;
}

#documents {
  order: 1;
  width: 100%;
}

#documents h2 {
  margin-top: 0;
}

#document-table {
  width: 100%;
}

#document-table tr {
  border-bottom: 1px solid #e6e6e6;
}

#document-table th,
#document-table td {
  padding: 5px;
  border-bottom: 1px solid #e6e6e6;
  text-align: left;
}

#document-table td {
  word-wrap: break-word;
  overflow-wrap: break-word;
  hyphens: auto;
}

#document-table td a {
  color: black !important;
  text-decoration: none !important;
}

#document-table td span {
  cursor: pointer;
}

.create-div {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(1,1,1,0.5) !important;
  margin: 0 !important;
  padding: 0 !important;
}

.create-div div {
  background-color: white;
}

.hide,
.hide-mobile {
  display: none;
}

#left-bar,
#right-bar {
  order: 2;
  width: 100%;
}

#left-bar > div h4,
#right-bar > div h4 {
  margin-top: 0;
}

#search {
  border: 1px solid #e6e6e6;
}

#search input {
  height: 50px;
  border: none;
}

#search input[type='text'] {
  width: calc(100% - 50px);
  border-right: 1px solid #e6e6e6
}

#search input[type='submit'] {
  width: 50px;
  background-color: white;
  cursor: pointer;
}

#folder-wrapper,
#right-bar > div {
  padding: 10px;
  margin-top: 10px;
  border: 1px solid #e6e6e6;
}

.flex-heading {
  display: flex;
  justify-content: space-between;
}

.new-span {
  font-size: 80%;
  cursor: pointer;
}

#right-bar > div:first-child {
  margin-top: 0;
}

.folder-item {
  display: flex;
  justify-content: space-between;
  padding: 1px;
}

.subfolders {
  margin-left: 25px;
}

.folder-setting,
.person-setting,
.state-setting{
  display: none;
}

.person,
.state,
.tag {
  display: flex;
  justify-content: space-between;
  padding: 5px;
}

.pointer {
  cursor: pointer;
}

#pagination {
  padding: 20px;
  display: flex;
  justify-content: space-between;
}

.pagination-button {
  color: black;
  text-decoration: none;
  padding: 5px 10px;
  font-weight: bold;
}

a.pagination-button.active,
a.pagination-button:hover {
  color: white;
  background-color: #075dc5;
}

#footer {
  margin: 0 30px 10px 0;
  font-size: small;
  color: gray;
  float: right;
}

/*
 * Document Page
 */

#document {
  width: 100%;
  margin: auto;
  background-color: #ecf0f5 !important;
}

#document h2 {
  margin-top: 0;
}

#document input,
#document select {
  border: 1px solid #e6e6e6;
  box-sizing: border-box;
  width: 100%;
  padding: 7px 10px;
}

#document-fields {
  background-color: white;
  padding: 30px;
}

.document-field {
  margin-bottom: 20px;
  width: 100%;
}

#document button {
  padding: 7px 10px;
  box-sizing: border-box;
  border: none;
  background-color: #075dc5;
  background-image: linear-gradient(-180deg,#2e88f7,#075dc5 90%);
  font-size: 1em;
  font-weight: bold;
  color: white;
  cursor: pointer;
  width: 100%;
}

#fields-bottom, 
#document #messages {
  width: 100%;
}

#document #messages {
  box-sizing: border-box;
  margin-top: 20px;
}

.lds-dual-ring {
  display: none;
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 10;
  left: 0;
  top: 0;
  padding: 0 !important;
  margin: 0 !important;
  background-color: rgba(0, 0, 0, 0.5) !important;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  position: fixed;
  top: calc(50% - 32px);
  left: calc(50% - 32px);
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/*
 * Media Querys
 */

@media only screen and (min-width: 800px) {
  #left-bar,
  #right-bar {
    width: calc(50% - 60px);
  }

  #document-fields {
    display: flex;
    flex-wrap: wrap;
  }

  #fields-left,
  #fields-right {
    width: calc(50% - 20px);
  }

  #fields-left {
    margin-right: 20px;
  }

  #fields-right {
    margin-left: 20px;
  }

  #document button,
  #document #messages {
    width: 50%;
    margin-left: 25%;
  }
}

@media only screen and (max-width: 580px) {
  #header h1 {
    width: 100%;
    text-align: center;
  }

  #header ul {
    width: 100%;
  }

  #header ul li {
    border-top: 1px solid white;
  }

  #header ul li:first-child {
    border-left: none;
  }

  #header ul .fill-header {
    flex-grow: 1;
    text-align: center;
  }
}

@media only screen and (min-width: 750px) {
  .hide-mobile {
    display: table-cell;
  }
}

@media only screen and (min-width: 1600px) {
  #main {
    flex-wrap: no-wrap;
  }

  #documents {
    width: 1px;
    order: 0;
    flex-grow: 1;
  }

  #left-bar,
  #right-bar {
    order: 0;
    width: 300px;
  }
}

